--- a/html/services.html
+++ b/html/services.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="services.html">services</a>
+                        <a class="nav-link" href="services.html">What We Provide</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
